# everything-sdk-rs

./: .gitignore  Cargo.toml  README.md
everything-sdk-sys/: Cargo.toml  build.rs
everything-sdk-sys/Everything-SDK/src/: Everything.c
everything-sdk-sys/src/: bindings.rs  lib.rs
examples/: heavy.rs  readme.rs  readme_async.rs  readme_raw.rs  simple.rs
src/: ergo.rs  lib.rs  raw.rs
