[package]
name = "everything-sdk"
version = "0.0.6"
edition = "2021"
description = "An ergonomic Everything(voidtools) SDK wrapper in Rust. (Supports async and raw sdk functions)"
readme = "README.md"
repository = "https://github.com/owtotwo/everything-sdk-rs"
homepage = "https://github.com/owtotwo/everything-sdk-rs"
documentation = "https://docs.rs/everything-sdk-rs"
keywords = ["everything", "SDK", "wrapper", "bindings"]
license = "GPL-3.0-or-later"

[workspace]
members = ["everything-sdk-sys"]

[dependencies]
chrono = "0.4"
thiserror = "1.0"
tracing = "0.1.40"
enum-primitive-derive = "0.2.2"
num-traits = "0.2.17"
bitflags = "2.4.1"
futures = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
everything-sdk-sys = { path = "everything-sdk-sys", version = "0.0.3" }
widestring = "1.0.2"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Time"
] }

[dev-dependencies]
anyhow = "1.0"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }

[features]
default = []
raw = []
async = ["dep:futures"]


[[example]]
name = "readme"
path = "examples/readme.rs"
required-features = []

[[example]]
name = "readme_async"
path = "examples/readme_async.rs"
required-features = ["async"]

[[example]]
name = "readme_raw"
path = "examples/readme_raw.rs"
required-features = ["raw"]

# https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
